@@ -1,3 +1,9 @@
+master
+======
+testing on HCD:
+    - DockerCompose tweaked to invoke `docker compose`
+    - HCD 1.0.0 and Data API 1.0.15 as test targets
+
 v. 1.4.1
 ========
 FindEmbeddingProvidersResult and descendant dataclasses:
